--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Linux-Setns
-version:            0.03
+version:            0.04
 abstract:           Perl interface for Linux setns system call.
 author:
     - Marian Marinov <HackMan>
@@ -19,3 +19,6 @@ generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
+resources:
+    repository: https://github.com/hackman/Linux-Setns
+    license: http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
